--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -266,26 +266,32 @@ main a:hover {
 }
 .main-4-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 1/2;
+    grid-column: 1/4;
     grid-row: 2/3;
     margin: 1px;
 }
 .main-5-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 2/3;
-    grid-row: 2/4;
+    grid-column: 1/2;
+    grid-row: 3/4;
     margin: 1px;
 }
 .main-6-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 3/4;
-    grid-row: 2/4;
+    grid-column: 2/3;
+    grid-row: 3/5;
     margin: 1px;
 }
 .main-7-element-about-me{
     background-color: var(--primary-color);
+    grid-column: 3/4;
+    grid-row: 3/5;
+    margin: 1px;
+}
+.main-8-element-about-me{
+    background-color: var(--primary-color);
     grid-column: 1/2;
-    grid-row: 3/4;
+    grid-row: 4/5;
     margin: 1px;
     overflow: hidden;
 }
