--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -43,24 +43,8 @@ body {
     max-width: 1600px;
     margin: 0 auto;
 }
-.header-grid {
-    display: grid;
-    grid-template-columns: max-content;
-}
 .header-1 {
-    grid-column: 1/2;
-}
-.header-2{
-    grid-column: 2/3;
-    margin: 1px;
-    background-color: var(--primary-color);
-}
-.logo {
-    width: 80px;
-}
-nav {
-    display: flex;
-    justify-content: flex-start;
+   display: flex;
 }
 nav a:hover {
     background-color: var(--secondary-color);
@@ -85,6 +69,13 @@ nav a {
     background-color: white;
     padding: 30px 80px;
     margin: 1px;
+}
+.a-4{
+    background-color: white;
+    margin: 1px;
+}
+.logo {
+    width: 80px;
 }
 /*...........................Footer.................................*/
 footer p {
@@ -300,10 +291,6 @@ main a:hover {
         height: auto;
     }
     .footer-grid{
-        display: flex;
-        flex-direction: column;
-    }
-    .header-grid {
         display: flex;
         flex-direction: column;
     }
