--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -22,6 +22,30 @@
   --nav-hover-link-color: var(--secondary-color);
   --nav-hover-background-color: var(--primary-color);
 }
+.topnav {
+    overflow: hidden;
+    background-color: var(--primary-color);
+} 
+.topnav a {
+    float: left;
+    display: block;
+    color: var(--secondary-color);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+} 
+.topnav a:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+} 
+.topnav a.active {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+} 
+.topnav .icon {
+    display: none;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
@@ -43,40 +67,7 @@ body {
     max-width: 1600px;
     margin: 0 auto;
 }
-.header-1 {
-   display: flex;
-}
-nav a:hover {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-}
-nav a {
-    color: var(--secondary-color);
-    text-decoration: none;
-    font-family: var(--heading-font);
-}
-.a-1{
-    background-color: white;
-    padding: 30px 80px;
-    margin: 1px;
-}
-.a-2{
-    background-color: white;
-    padding: 30px 80px;
-    margin: 1px;
-}
-.a-3{
-    background-color: white;
-    padding: 30px 80px;
-    margin: 1px;
-}
-.a-4{
-    background-color: white;
-    margin: 1px;
-}
-.logo {
-    width: 80px;
-}
+
 /*...........................Footer.................................*/
 footer p {
     font-size: 1.2em;
@@ -285,7 +276,26 @@ main a:hover {
 .img-gatito {
     max-width: 300px;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
     .main-home {
         display: block;
         height: auto;
