--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -48,8 +48,8 @@
 }
 /* Add an active class to highlight the current page */
 .topnav a.active {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 } 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
@@ -78,6 +78,60 @@ body {
 }
 
 /*...........................Footer.................................*/
+.footer-grid {
+    display: grid;  
+}
+.footer1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 20px;
+}
+.footer2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: var(--primary-color);
+    margin: 1px; 
+}
+.footer3 {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    background-color: var(--primary-color);
+    margin: 1px;  
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    margin: 10px;
+} 
+.fa:hover {
+    opacity: 0.7;
+}
+  
+.fa-facebook {
+    background: var(--secondary-color);
+    color: white;
+}
+
+.fa-linkedin {
+    background: var(--secondary-color);
+    color: white;
+}
+  
+.fa-youtube {
+    background: var(--secondary-color);
+    color: white;
+}
+  
+.fa-instagram {
+    background: var(--secondary-color);
+    color: white;
+}
 footer p {
     font-size: 1.2em;
     text-align: center;
@@ -92,39 +146,6 @@ footer p a:hover {
     color: var(--primary-color);
     background-color: var(--secondary-color);
     padding: 20px;
-}
-.social{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.social-icon {
-    width: 80px;
-    padding-top: 10px;
-}
-.footer-grid{
-    display: grid;
-}
-.footer-1{
-    grid-column: 1/2;
-    background-color: var(--primary-color);
-    margin: 1px;
-    padding: 20px;
-}
-.footer-2{
-    grid-column: 2/3;
-    background-color: var(--primary-color);
-    margin: 1px;
-    padding: 20px;
-}
-.footer-3{
-    grid-column: 3/4;
-    background-color: var(--primary-color);
-    margin: 1px;
-}
-.copy {
-    background-color: var(--primary-color);
-    margin: 1px;
 }
 /*........................Home Page Styles.............................*/
 .imagen-main {
