--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -110,7 +110,7 @@ body {
   
 .fa-facebook {
     background: var(--secondary-color);
-    color: white;
+    color: var(--primary-color);
     padding: 20px;
     font-size: 30px;
     width: 30px;
@@ -122,7 +122,7 @@ body {
 
 .fa-linkedin {
     background: var(--secondary-color);
-    color: white;
+    color: var(--primary-color);
     padding: 20px;
     font-size: 30px;
     width: 30px;
@@ -134,7 +134,7 @@ body {
   
 .fa-youtube {
     background: var(--secondary-color);
-    color: white;
+    color: var(--primary-color);
     padding: 20px;
     font-size: 30px;
     width: 30px;
@@ -146,7 +146,7 @@ body {
   
 .fa-instagram {
     background: var(--secondary-color);
-    color: white;
+    color: var(--primary-color);
     padding: 20px;
     font-size: 30px;
     width: 30px;
@@ -180,12 +180,12 @@ footer p a:hover {
     width: 100%;
 }
 main a {
-    color: #000000;
+    color: var(--secondary-color);
     text-decoration: none;
 }
 main a:hover {
-    color: #ffffff;
-    background-color: #000000;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     padding: 10px;
     text-decoration: none;
 }
