--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -26,10 +26,6 @@
     max-width: 1600px;
     margin: 0 auto;
 }
-.contact-main {
-    background-color: var(--primary-color);
-    padding: 50px;
-}
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
@@ -47,7 +43,7 @@ body {
     color: var(--accent1-color);
     background-image: linear-gradient(90deg, var(--accent1-color), var(--accent2-color), var(--accent3-color), var(--accent4-color));
 }
-/*...........................Navigation Var.................................*/
+/*........................... Navigation Var .................................*/
 .topnav {
     overflow: hidden;
     background-color: var(--primary-color);
@@ -72,7 +68,7 @@ body {
 .topnav .icon {
     display: none;
 }
-/*...........................Footer.................................*/
+/*........................... Footer .................................*/
 .footer-grid {
     display: grid;  
 }
@@ -162,7 +158,7 @@ footer p a:hover {
     color: var(--primary-color);
     background-color: var(--secondary-color);
 }
-/*........................Home Page Styles.............................*/
+/*........................ Home Page Styles .............................*/
 .main-home{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -269,7 +265,7 @@ main a:hover {
     margin: 1px;
     padding: 10px;
 }
-/*..........................About me styles..........................*/
+/*.......................... About me styles ..........................*/
 .main-about-me {
     display: grid;
 }
@@ -298,6 +294,11 @@ main a:hover {
     grid-column: 1/2;
     grid-row: 3/4;
     margin: 1px;
+}
+/*........................ Contact Page Styles .............................*/
+.contact-main {
+    background-color: var(--primary-color);
+    padding: 50px;
 }
 @media screen and (max-width: 600px) {
     /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
