--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -300,8 +300,10 @@ main a:hover {
 }
 /*........................ Contact Page Styles .............................*/
 .contact-main {
+    display: grid;
+    margin: 1px;
     background-color: var(--primary-color);
-    padding: 50px;
+    padding: 10px;
 }
 @media screen and (max-width: 600px) {
     /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
