--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -62,8 +62,8 @@ body {
     color: var(--primary-color);
 }
 .topnav a.active {
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
 } 
 .topnav .icon {
     display: none;
