--- a/analina/styles/style_site_plan_analina.css
+++ b/analina/styles/style_site_plan_analina.css
@@ -181,3 +181,50 @@ section {
   text-align: center;
   background-color: var(--primary-color);
 }
+.fa:hover {
+  opacity: 0.7;
+} 
+.fa-facebook {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin: 10px;
+}
+.fa-linkedin {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin: 10px;
+}  
+.fa-youtube {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin: 10px;
+} 
+.fa-instagram {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin: 10px;
+}
