--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -86,6 +86,7 @@ body {
     grid-row: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
+    padding: 10px;
 }
 .footer2 {
     grid-column: 2/3;
