--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -306,6 +306,70 @@ main a:hover {
     background-color: var(--primary-color);
     padding: 10px;
 }
+/* Feedback */
+#feedback {
+    padding: 10px;
+    text-align: center;
+    /* make this element invisible until we are ready for it */
+    display: none;
+    font-family: Oswald, Helvetica, sans-serif;     
+}
+.moveDown {
+    margin-top: 3em;
+}
+/* Estilos del formulario de contacto */
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 300px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #EE3224;
+    border-radius: 1em;
+} 
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+form li + li {
+    margin-top: 1em;
+}  
+label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+}  
+input, textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em 'Open sans', Helvetica, sans-serif;
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+    /* Match form field borders */
+    border: 1px solid #EE3224;
+}
+input:focus, textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000000;
+}
+textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+    /* Provide space to type some text */
+    height: 5em;
+} 
+.button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+} 
+button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: 0.5em;
+}
 @media screen and (max-width: 600px) {
     /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
     .topnav a:not(:first-child) {display: none;}
