--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -306,13 +306,22 @@ main a:hover {
     background-color: var(--primary-color);
     padding: 10px;
 }
+.contact-grid {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+.contatc-element-1 {
+    grid-column: 1/2;
+    background-color: var(--primary-color);
+    margin: 1px;
+}
 /* Feedback */
 #feedback {
     padding: 10px;
     text-align: center;
     /* make this element invisible until we are ready for it */
     display: none;
-    font-family: Oswald, Helvetica, sans-serif;     
+    color: var(--secondary-color);    
 }
 .moveDown {
     margin-top: 3em;
@@ -324,8 +333,9 @@ form {
     width: 300px;
     /* Form outline */
     padding: 1em;
-    border: 1px solid #EE3224;
+    border: 1px solid var(--secondary-color);
     border-radius: 1em;
+    color: var(--secondary-color);
 } 
 ul {
     list-style: none;
@@ -339,21 +349,21 @@ label {
     /* Uniform size & alignment */
     display: inline-block;
     width: 90px;
-    text-align: right;
+    text-align: left;
 }  
 input, textarea {
     /* To make sure that all text fields have the same font settings
        By default, textareas have a monospace font */
-    font: 1em 'Open sans', Helvetica, sans-serif;
+    font: 1em;
     /* Uniform text field size */
     width: 300px;
     box-sizing: border-box;
     /* Match form field borders */
-    border: 1px solid #EE3224;
+    border: 1px solid var(--secondary-color);
 }
 input:focus, textarea:focus {
     /* Additional highlight for focused elements */
-    border-color: #000000;
+    border-color: var(--secondary-color);
 }
 textarea {
     /* Align multiline text fields with their labels */
