--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -300,20 +300,28 @@ main a:hover {
     padding: 10px;
 }
 /*........................ Contact Page Styles .............................*/
-.contact-main {
-    display: grid;
-    margin: 1px;
-    background-color: var(--primary-color);
-    padding: 10px;
-}
 .contact-grid {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
 }
 .contact-element-1 {
+    grid-column: 1/3;
+    background-color: var(--primary-color);
+    margin: 1px;
+}
+.contact-element-2 {
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
+    padding: 50px;
+}
+.contact-element-3 {
+    grid-column: 2/3;
+    background-color: var(--primary-color);
+    margin: 1px;
+}
+.gatito {
+    display: grid;
+    width: 50%;
 }
 /* Feedback */
 #feedback {
