--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -307,6 +307,7 @@ main a:hover {
     grid-column: 1/3;
     background-color: var(--primary-color);
     margin: 1px;
+    padding: 10px;
 }
 .contact-element-2 {
     grid-column: 1/2;
@@ -321,7 +322,7 @@ main a:hover {
 }
 .gatito {
     display: grid;
-    width: 50%;
+    width: 100%;
 }
 /* Feedback */
 #feedback {
@@ -414,5 +415,8 @@ button {
     .footer-grid{
         display: flex;
         flex-direction: column;
+    }
+    .contact-grid {
+        display: block;
     }
 }
