--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -321,8 +321,8 @@ main a:hover {
     margin: 1px;
 }
 .gatito {
-    display: grid;
-    width: 100%;
+    width: 40%;
+    margin: 10%;
 }
 /* Feedback */
 #feedback {
