--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -320,7 +320,7 @@ main a:hover {
     background-color: var(--primary-color);
     margin: 1px;
 }
-.gatito {
+.carta {
     width: 40%;
     margin: 10%;
 }
