--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -80,6 +80,7 @@ body {
 /*........................... Footer .................................*/
 .footer-grid {
     display: grid;  
+    grid-template-columns: 60% 40%;
 }
 .footer1 {
     grid-column: 1/2;
@@ -302,6 +303,7 @@ main a:hover {
 /*........................ Contact Page Styles .............................*/
 .contact-grid {
     display: grid;
+    grid-template-columns: 60% 40%;
 }
 .contact-element-1 {
     grid-column: 1/3;
@@ -324,70 +326,61 @@ main a:hover {
     width: 40%;
     margin: 10%;
 }
-/* Feedback */
-#feedback {
-    padding: 10px;
-    text-align: center;
-    /* make this element invisible until we are ready for it */
-    display: none;
-    color: var(--secondary-color);    
-}
-.moveDown {
-    margin-top: 3em;
-}
-/* Estilos del formulario de contacto */
-form {
-    /* Center the form on the page */
-    margin: 0 auto;
-    width: 300px;
-    /* Form outline */
-    padding: 1em;
-    border: 1px solid var(--secondary-color);
-    border-radius: 1em;
+form * {
+    box-sizing: border-box;
+    text-align: left;
     color: var(--secondary-color);
 } 
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-form li + li {
-    margin-top: 1em;
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 4px;
+    resize: vertical;
 }  
 label {
-    /* Uniform size & alignment */
+    padding: 12px 12px 12px 0;
     display: inline-block;
-    width: 90px;
-    text-align: left;
+} 
+input[type=submit] {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+} 
+input[type=submit]:hover {
+    background-color: var(--secondary-color);
+} 
+.container {
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    padding: 20px;
 }  
-input, textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
-    font: 1em;
-    /* Uniform text field size */
-    width: 300px;
-    box-sizing: border-box;
-    /* Match form field borders */
-    border: 1px solid var(--secondary-color);
-}
-input:focus, textarea:focus {
-    /* Additional highlight for focused elements */
-    border-color: var(--secondary-color);
-}
-textarea {
-    /* Align multiline text fields with their labels */
-    vertical-align: top;
-    /* Provide space to type some text */
-    height: 5em;
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
 } 
-.button {
-    /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
-} 
-button {
-    /* This extra margin represent roughly the same space as the space
-       between the labels and their text fields */
-    margin-left: 0.5em;
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}  
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
 }
 @media screen and (max-width: 600px) {
     /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
